# termtris

./: .gitignore  README.md  pyproject.toml  setup.py
termtris/: board.py  shapes.py  storage.py  ui.py
termtris.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
