[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termtris"
version = "0.1.0"
description = "A terminal Tetris game with persistent highscores (curses + SQLite)"
authors = [{name = "ChatGPT", email = "noreply@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["platformdirs>=4.0"]

[project.scripts]
termtris = "termtris.cli:main"

