[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tetriskekw"
version = "0.11.0"
description = "A terminal Tetris game with persistent highscores (curses + SQLite)"
authors = [
    { name = "Shayan", email = "tomohmmdali@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "platformdirs>=4.0",
    "ltermio>=0.2.0",
    "wcwidth>=0.2.5" 
]
license = { file = "LICENSE" }
keywords = ["tetris", "cli", "game", "terminal", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
termtris = "termtris.cli:main"

[tool.setuptools]
packages = ["termtris"]
